# zwo-camera-control

./: .gitignore  README.md  pyproject.toml
examples/: ws_client.ipynb
src/asi_stream_gui/: README.md  __init__.py  __main__.py  camera_config.py  client.py  gui.py  pyproject.toml  recorder.py  run.py  sdk.py  stretch.py  widgets.py  ws_server.py
src/zwo_camera_gui/: README.md  __init__.py  __main__.py  camera_config.py  capture.py  client.py  gui.py  pyproject.toml  qhy.py  qhy_capture.py  recorder.py  run.py  style.py  ws_server.py
