[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "zwo-camera-gui"
version = "0.1.0"
description = "ZWO ASI camera streaming stress-test (PyQt5 + direct ctypes SDK)"
requires-python = ">=3.10"

dependencies = [
    "PyQt5>=5.15",
    "numpy>=1.24",
    "websockets>=12.0",
    "astropy>=5.0",
    "ipykernel"
]


[project.scripts]
zwo-camera-gui = "zwo_camera_gui.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
